# auditize

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  build.sh  docker-compose.yml  index.html  main.py  openapi.json  requirements.txt  sitemap.xml
backend/: .gitignore  pyproject.toml  requirements-before-pinning.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
backend/auditize/: auth.py  main.py
backend/auditize/accesscontrol/: models.py  permissions.py  rights.py  utils.py
backend/auditize/common/: api.py  api_models.py  config.py  db.py  email.py  exceptions.py  mongo.py  utils.py
backend/auditize/common/pagination/cursor/: api_models.py
backend/auditize/common/pagination/page/: api.py  api_models.py  models.py
backend/auditize/integrations/: api.py  api_models.py  models.py  service.py
backend/auditize/logs/: api.py  api_models.py  db.py  models.py  service.py
backend/auditize/permissions/: api_models.py  assertions.py  models.py  operations.py
backend/auditize/repos/: api.py  api_models.py  models.py  service.py
backend/auditize/users/: api.py  api_models.py  models.py  service.py
backend/scripts/: bootstrap-superadmin.py  cleanup-db.py  download-logs.py  es-disk-usage-fields.py  es-upgrade-index-to-v1.py  import-logs.py  inject-example.py  inject-logs.py  inject-logs2.py
backend/src/auditize/: __main__.py  auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  openapi.py
backend/src/auditize/api/: exception.py  validation.py
backend/src/auditize/api/models/: cursor_pagination.py  dates.py  page_pagination.py  search.py
backend/src/auditize/apikey/: api.py  api_models.py  models.py  service.py  sql_models.py
backend/src/auditize/apikeys/: api.py  api_models.py  models.py  service.py
backend/src/auditize/app/: __init__.py  app_api.py  app_static.py  cors.py  openapi.py
backend/src/auditize/auth/: api.py  authorizer.py  jwt.py
backend/src/auditize/common/: api.py  config.py  datetime.py  db.py  email.py  exceptions.py  utils.py
backend/src/auditize/database/: __init__.py  core.py  dbm.py  elastic.py  migration.py
backend/src/auditize/database/alembic/: env.py
backend/src/auditize/database/sql/: models.py  service.py
backend/src/auditize/helpers/: api.py  datetime.py  email.py  openapi.py
backend/src/auditize/helpers/api/: errors.py  validators.py
backend/src/auditize/i18n/: __init__.py  constants.py  detection.py  lang.py  translator.py
backend/src/auditize/info/: api.py
backend/src/auditize/integrations/: api.py  api_models.py  models.py  service.py
backend/src/auditize/log/: api.py  api_models.py  csv.py  db.py  index.py  models.py  service.py  service_es.py  sql_models.py
backend/src/auditize/log/service/: csv.py  (+3 more)
backend/src/auditize/log_filter/: api.py  api_models.py  models.py  service.py  sql_models.py
backend/src/auditize/log_i18n_profile/: api.py  api_models.py  models.py  service.py  sql_models.py
backend/src/auditize/logfilters/: api.py  api_models.py  models.py  service.py
backend/src/auditize/logi18nprofiles/: api.py  api_models.py  models.py  service.py
backend/src/auditize/logs/: api.py  api_models.py  db.py  models.py  service.py
backend/src/auditize/mcp/: __init__.py
backend/src/auditize/permissions/: api_models.py  assertions.py  models.py  operations.py  service.py  sql_models.py
backend/src/auditize/repo/: api.py  api_models.py  models.py  service.py  sql_models.py
backend/src/auditize/repos/: api.py  api_models.py  models.py  service.py
backend/src/auditize/resource/: api_models.py  models.py  service.py  sql_models.py  sql_service.py
backend/src/auditize/user/: api.py  api_models.py  models.py  service.py  sql_models.py
backend/src/auditize/users/: api.py  api_models.py  models.py  service.py
backend/tests/: conftest.py  helpers.py  pytest.ini  test_accesscontrol_permissions.py  test_accesscontrol_rights.py  test_accesscontrol_utils.py  test_api.py  test_apikey_api.py  test_apikeys_api.py  test_auth.py  test_auth_api.py  test_auth_authorizer.py  test_auth_jwt.py  test_cli.py  test_config.py  test_core_db_migration.py  test_i18n.py  test_info_api.py  test_integrations_api.py  test_log_api.py  test_log_db_migration.py  test_log_filter_api.py  test_log_filters_api.py  test_log_i18n_profile_api.py  test_log_reindex.py  test_log_service.py  test_logi18nprofile_api.py  test_logs_api.py  test_logs_service.py  test_mcp.py  test_pagination_cursor.py  test_permissions_assertions.py  test_permissions_operations.py  test_permissions_service.py  test_repo_api.py  test_repos_api.py  test_scheduler.py  test_user_api.py  test_users_api.py  test_users_service.py
backend/tests/helpers/: __init__.py  apikey.py  apikeys.py  database.py  http.py  integrations.py  log.py  log_filter.py  log_i18n_profile.py  logfilters.py  logi18nprofiles.py  logs.py  matchers.py  pagination.py  permissions.py  repo.py  repos.py  test_migration.py  user.py  users.py  utils.py
backend/tests/helpers/permissions/: constants.py  tests.py
(+317 files in other folders)
