[project]
name = "auditize"
description = "Empower your functional logs"
readme = "README.md"
authors = [
    { name = "Nicolas Delon", email = "nicolas.delon@gmail.com" }
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://www.auditize.org"
Documentation = "https://www.auditize.org"
Repository = "https://github.com/auditize/auditize"
Issues = "https://github.com/auditize/auditize/issues"
Changelog = "https://github.com/auditize/auditize/blob/master/CHANGELOG.md"

[project.scripts]
auditize = "auditize.__main__:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }
version = {attr = "auditize.version.__version__"}

[tool.setuptools.package-data]
"auditize" = ["data/**", "i18n/translations/*.json"]

[tool.ruff]
src = ["src", "tests", "scripts"]
fix = true

[tool.ruff.lint]
select = [
    "I",  # isort
]
